--- a/alpha/accounts/templates/userena/password_reset_confirm_form.html
+++ b/alpha/accounts/templates/userena/password_reset_confirm_form.html
@@ -4,37 +4,26 @@
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
 {% block content %}
-    <h1>
-        {% trans "Reset Password" %}
-    </h1>
-    <div class="content account-options-wrapper">
-        <div class="main-content account-options">
+    <div class="center-align-wrapper">
+        <div class="account-form-wrapper">
             <form action="" method="post">
+                <h1>
+                    {% trans "Reset Password" %}
+                </h1>
                 {% csrf_token %}
-                <div class="options options-userena">
-                    <table>
-                        <tr>
-                            <td class="first">
-                                {{ form.new_password1.label }}
-                            </td>
-                            <td>
-                                {{ form.new_password1 }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="first">
-                                {{ form.new_password2.label }}
-                            </td>
-                            <td>
-                                {{ form.new_password2 }}
-                            </td>
-                        </tr>
-                    </table>
-                </div>                
+
+                <div class="password-input-wrapper">
+                    <div class="pass-icon"></div>
+                    <input id="id_new_password1" name="new_password1" type="password" placeholder="PASSWORD">
+                </div>
+
+                <div class="password-input-wrapper">
+                    <div class="pass-icon"></div>
+                    <input id="id_new_password2" name="new_password2" type="password" placeholder="PASSWORD CONFIRMATION">
+                </div>
               
                 <input type="submit" class="submit standart button" value="{% trans "Reset password" %}" />
             </form>
         </div>
     </div>
-    
 {% endblock %}
