--- a/alpha/accounts/templates/userena/password_reset_form.html
+++ b/alpha/accounts/templates/userena/password_reset_form.html
@@ -4,29 +4,18 @@
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
 {% block content %}
-    <h1>
-        {% trans "Reset Password" %}
-    </h1>
-    <div class="content account-options-wrapper">
-        <div class="main-content account-options">
-            <form action="" method="post">                
+    <div class="center-align-wrapper">
+        <div class="account-form-wrapper">
+            <h1>
+                {% trans "Reset Password" %}
+            </h1>
+            <form action="" method="post">
                 {% csrf_token %}
-                <div class="options options-userena">
-                    <table>
-                        <tr>
-                            <td class="first">
-                                {{ form.email.label }}
-                            </td>
-                            <td>
-                                {{ form.email }}
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                <input id="id_email" maxlength="254" name="email" type="text" placeholder="EMAIL">
+
+
                 <input type="submit" class="submit standart button" value="{% trans "Send password" %}" />
             </form>
-            
         </div>
-    </div>
-    
+    </div>    
 {% endblock %}
