--- a/alpha/accounts/templates/userena/password_reset_done.html
+++ b/alpha/accounts/templates/userena/password_reset_done.html
@@ -5,5 +5,9 @@
 {% block content_title %}<h2>{% trans "Password reset email sent" %}</h2>{% endblock %}
 
 {% block content %}
-    <p>{% trans "An e-mail has been sent to you which explains how to reset your password." %}</p>
+    <div class="primary-content item-primary-content">
+        <div class="primary-wrapper">
+            <p>{% trans "An e-mail has been sent to you which explains how to reset your password." %}</p>
+        </div>
+    </div>
 {% endblock %}
