--- a/alpha/accounts/templates/userena/password_reset_form.html
+++ b/alpha/accounts/templates/userena/password_reset_form.html
@@ -3,30 +3,24 @@
 
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
+{% block head %}
+    <script src="{{STATIC_URL}}js/accounts/userena.js" type="text/javascript"></script>
+{% endblock head %}
+
 {% block content %}
-    <h1>
-        {% trans "Reset Password" %}
-    </h1>
-    <div class="content account-options-wrapper">
-        <div class="main-content account-options">
-            <form action="" method="post">                
-                {% csrf_token %}
-                <div class="options options-userena">
-                    <table>
-                        <tr>
-                            <td class="first">
-                                {{ form.email.label }}
-                            </td>
-                            <td>
-                                {{ form.email }}
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <input type="submit" class="submit standart button" value="{% trans "Send password" %}" />
-            </form>
-            
+    <div class="stretch-wrapper">
+        <div class="center-align-wrapper">
+            <div class="account-form-wrapper">
+                <form action="" method="post">
+                    {% csrf_token %}
+
+                    <div class="userena-input no-icon" data-placeholder="{{ form.email.label }}">
+                        {{ form.email }}
+                    </div>
+
+                    <input type="submit" class="submit standart button userena-button" value="{% trans "Send password" %}" />
+                </form>
+            </div>
         </div>
     </div>
-    
 {% endblock %}
