--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
@@ -8,6 +8,7 @@
     <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/advertising-images.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/actions/advertising-list-page.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block page %}
@@ -26,7 +27,7 @@
                 </li>
             </ul>
             <div class="box visible advertising-stats">
-                {% admin_advertising_campaigns campaigns %}
+                {% admin_advertising_campaigns campaigns_filter %}
             </div>
         </div>
     </div>
