--- a/alpha/cityfusion_admin/templates/cf-admin/base.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/base.html
@@ -9,6 +9,11 @@
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="{{ STATIC_URL }}font-awesome/css/font-awesome.min.css">
+    <!--[if IE 7]>
+      <link rel="stylesheet" href="{{ STATIC_URL }}font-awesome/css/font-awesome-ie7.min.css">
+    <![endif]-->
+
     <link href="{{STATIC_URL}}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{STATIC_URL}}styles/browse/browse.css" rel="stylesheet" type="text/css" />
@@ -19,13 +24,14 @@
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-migrate-1.2.1.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>    
+    <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/event/purl.js" ></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/event/query_filters.js" ></script>
     
-    <script src="{{STATIC_URL}}js/accounts/choose-account-context.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/messages.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="{{STATIC_URL}}js/accounts/choose-account-context.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/messages.js"></script>
     
-    <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/searchpad/ajax-popup.js" ></script>
     <style>
         .tabs-container {
             width: 100%;
