--- a/alpha/advertising/templates/advertising/setup/types.html
+++ b/alpha/advertising/templates/advertising/setup/types.html
@@ -1,128 +1,75 @@
 {% load dictionary_tags %}
 
-Pick the type of ad(s) they want to put on City Fusion: Box, Skyscraper, Banner, etc.
+<span class="types-title">Pick the type of ad(s) they want to put on City Fusion:</span>
 <div class="advertising-types">
     <table cellspacing="0" cellpadding="0">
         <tr>
             <th>
-                Size of Ad
-                <a href="javascript:void;" class="balloon">
-                    <div class="buttonq mini"></div>
-                </a>
-                <div class="balloon-content">
-                    <h3>
-                        Help - Advertising Campaign
-                        <i>[Size]:</i>
-                    </h3>
-                    <p>
-                        Choose ad size
-                    </p>
-                </div>
+                AD SIZE
             </th>
             <th class="ad-type-col">
                 CPM
-                <a href="javascript:void;" class="balloon">
-                    <div class="buttonq mini"></div>
-                </a>
-                <div class="balloon-content">
-                    <h3>
-                        Help - Advertising Campaign
-                        <i>[CPM]:</i>
-                    </h3>
-                    <p>
-                        Cost per view
-                    </p>
-                </div>
+                <br/>
+                <span>(Price for 1000 views)</span>
             </th>
             {% if settings.ADVERTISING_TYPE_CPC_ON %}
             <th class="ad-type-col">
                 CPC
-                <a href="javascript:void;" class="balloon">
-                    <div class="buttonq mini"></div>
-                </a>
-                <div class="balloon-content">
-                    <h3>
-                        Help - Advertising Campaign
-                        <i>[CPC]:</i>
-                    </h3>
-                    <p>
-                        Cost per click
-                    </p>
-                </div>
+                <br/>
+                <span>(Price for 1 click)</span>
             </th>
             {% endif %}
-            <th>
-                CPM Prices
-                <a href="javascript:void;" class="balloon">
-                    <div class="buttonq mini"></div>
-                </a>
-                <div class="balloon-content">
-                    <h3>
-                        Help - Advertising Campaign
-                        <i>[CPM Price]:</i>
-                    </h3>
-                    <p>
-                        Price for 1000 views
-                    </p>
-                </div>
-            </th>
-            {% if settings.ADVERTISING_TYPE_CPC_ON %}
-            <th>
-                CPC Prices
-                <a href="javascript:void;" class="balloon">
-                    <div class="buttonq mini"></div>
-                </a>
-                <div class="balloon-content">
-                    <h3>
-                        Help - Advertising Campaign
-                        <i>[CPC Price]:</i>
-                    </h3>
-                    <p>
-                        Price for 1 click
-                    </p>
-                </div>
-            </th>
-            {% endif %}
-        </tr>
-        <tr class="empty-tr">
-            <td></td>
-            <td class="ad-type-col"></td>
-            {% if settings.ADVERTISING_TYPE_CPC_ON %}<td class="ad-type-col"></td>{% endif %}
-            <td></td>
-            {% if settings.ADVERTISING_TYPE_CPC_ON %}<td></td>{% endif %}
         </tr>
 
         {% for advertising_type in advertising_types %}
         <tr>
             <td class="ad-type-description-col">
-                <div class="checkbox">
-                    <input type="checkbox" id="id_advertising_type_{{ advertising_type.id }}" value="{{ advertising_type.id }}" name="advertising_types" data-ad-type="{{ advertising_type.id }}" {% if advertising_type.id in chosen_advertising_types %}checked="checked"{% endif %}>
-                    <label for="id_advertising_type_{{ advertising_type.id }}"></label>
-                    <label for="id_advertising_type_{{ advertising_type.id }}">{{ advertising_type }}</label>
-                </div>                                    
+                <input type="hidden"
+                       id="id_advertising_type_{{ advertising_type.id }}"
+                       value="{{ advertising_type.id }}"
+                       name="advertising_types"
+                       data-ad-type="{{ advertising_type.id }}"
+                       {% if advertising_type.id in chosen_advertising_types %}data-selected="1"{% endif %} />
+                <!--
+                <input type="checkbox"
+                       style="display: none;"
+                       id="id_advertising_type_{{ advertising_type.id }}"
+                       value="{{ advertising_type.id }}"
+                       name="advertising_types"
+                       data-ad-type="{{ advertising_type.id }}"
+                       {% if advertising_type.id in chosen_advertising_types %}checked="checked"{% endif %}>
+                -->
+                <label for="id_advertising_type_{{ advertising_type.id }}">{{ advertising_type }}</label>
             </td>
             <td class="ad-type-col">
-                <div class="radio">                                        
-                    <input type="radio" id="advertising_type_{{ advertising_type.id }}_cpm" value="CPM" name="advertising_payment_type.{{ advertising_type.id }}" data-ad-type="{{ advertising_type.id }}" {% ifequal chosen_advertising_payment_types|keyvalue:advertising_type.id "CPM" %}checked="checked"{% endifequal %}>
-                    <label for="advertising_type_{{ advertising_type.id }}_cpm"></label>
+                <div class="ad-type-col-wrapper">
+                    <div class="checkbox">
+                        <input type="checkbox"
+                               id="advertising_type_{{ advertising_type.id }}_cpm"
+                               value="CPM"
+                               name="advertising_payment_type.{{ advertising_type.id }}"
+                               data-ad-type="{{ advertising_type.id }}"
+                               {% ifequal chosen_advertising_payment_types|keyvalue:advertising_type.id "CPM" %}checked="checked"{% endifequal %}>
+                        <label for="advertising_type_{{ advertising_type.id }}_cpm"></label>
+                    </div>
+                    {{ advertising_type.cpm_price }}
                 </div>
             </td>
             {% if settings.ADVERTISING_TYPE_CPC_ON %}
-            <td class="ad-type-col">
-                <div class="radio">                                        
-                    <input type="radio" id="advertising_type_{{ advertising_type.id }}_cpc" value="CPC" name="advertising_payment_type.{{ advertising_type.id }}" data-ad-type="{{ advertising_type.id }}" {% ifequal chosen_advertising_payment_types|keyvalue:advertising_type.id "CPC" %}checked="checked"{% endifequal %}>
-                    <label for="advertising_type_{{ advertising_type.id }}_cpc"></label>
-                </div>
-            </td>
-            {% endif %}
-
-            <td class="center">
-                {{ advertising_type.cpm_price }}
-            </td>
-            {% if settings.ADVERTISING_TYPE_CPC_ON %}
-            <td class="center">
-                {{ advertising_type.cpc_price }}
-            </td>
+                <td class="ad-type-col">
+                    <div class="ad-type-col-wrapper">
+                        <div class="checkbox">
+                            <input type="checkbox"
+                                   id="advertising_type_{{ advertising_type.id }}_cpc"
+                                   value="CPC"
+                                   name="advertising_payment_type.{{ advertising_type.id }}"
+                                   data-ad-type="{{ advertising_type.id }}"
+                                   {% ifequal chosen_advertising_payment_types|keyvalue:advertising_type.id "CPC" %}checked="checked"{% endifequal %}>
+                            <label for="advertising_type_{{ advertising_type.id }}_cpc"></label>
+                        </div>
+                        {{ advertising_type.cpc_price }}
+                    </div>
+                </td>
             {% endif %}
         </tr>
         {% endfor %}
@@ -130,8 +77,6 @@ Pick the type of ad(s) they want to put on City Fusion: Box, Skyscraper, Banner,
             <td></td>
             <td class="ad-type-col"></td>
             {% if settings.ADVERTISING_TYPE_CPC_ON %}<td class="ad-type-col"></td>{% endif %}
-            <td></td>
-            {% if settings.ADVERTISING_TYPE_CPC_ON %}<td></td>{% endif %}
         </tr>
     </table>
 </div>
