--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-list.html
@@ -6,8 +6,11 @@
 {% block head %}
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{{STATIC_URL}}styles/select2.css" rel="stylesheet" type="text/css" />
+
     <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/advertising-images.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/select2.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/actions/advertising-list-page.js" type="text/javascript"></script>
 {% endblock %}
 
