Add show all button

--- a/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
+++ b/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
@@ -48,8 +48,10 @@
         <td></td>
         <td>
             {{ campaigns_filter.form.o }}
-            <input type="submit" value="search" class="button">
-
+            <div class="button show-all">
+                Show all
+            </div>
+            <input type="submit" value="Search" class="button">
         </td>
         </form>
     </tr>
