--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -12,6 +12,7 @@
 
     <script type="text/javascript" src="{{STATIC_URL}}turbolinks/turbolinks.js"></script>
 
+    <script src="{{STATIC_URL}}js/featured/featured-event-viewer.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/browse-page.js" type="text/javascript"></script>
 {% endblock %}
 
