--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -45,6 +45,7 @@
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/choose-account-context.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/messages.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/dombuilder.js" type="text/javascript"></script>
 
     <!-- Search Pad Popup scripts -->
     <link href="{{STATIC_URL}}styles/searchpad/popup.css" type="text/css" rel="stylesheet" media="all" />
